# CPP_PRAC

./: CMakeLists.txt
backtracking/: lexographically_smallest_from_pattern.cpp
priority_queue/: meeting_room.cpp  meeting_room_2.cpp  test
sliding_window/: fruits_basket.cpp
trees/: bin_tree_tilt.cpp  cousins_bt.cpp  evaluate_boolean.cpp  find_node_in_clone.cpp  find_target.cpp  get_min_diff.cpp  inorder_succressor_II.cpp  lonely_nodes.cpp  max_depth_nary_tree.cpp  nary_tree_level_order.cpp  pll.txt  post_order_nary.cpp  preorder_traversal_nary.cpp  prune_binary_tree.cpp  range_sum_BST.cpp  second_minimum.cpp  string_from_bst.cpp  sum_root_leaf.cpp  time_binary_tree_burn.cpp  univalued_binary_tree.cpp  verify_preorder.cpp  vertical_order_traversal.cpp
